
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct nm_send {int footer; int fence; int string; int version; int header; } ;
typedef int bool_t ;
typedef int XDR ;


 int FALSE ;
 int TRUE ;
 int xdr_nm_send_arg_int (int *,int *) ;
 int xdr_nm_send_arg_string (int *,int *) ;
 int xdr_nm_send_footer (int *,int *) ;
 int xdr_nm_send_header (int *,int *) ;

bool_t xdr_nm_send(XDR *xdrs, struct nm_send *objp)
{
 if(!xdr_nm_send_header(xdrs, &objp->header))
  return (FALSE);
 if(!xdr_nm_send_arg_int(xdrs, &objp->version))
  return (FALSE);
 if(!xdr_nm_send_arg_string(xdrs, &objp->string))
  return (FALSE);
 if(!xdr_nm_send_arg_int(xdrs, &objp->fence))
  return (FALSE);
 if(!xdr_nm_send_footer(xdrs, &objp->footer))
  return (FALSE);
 return (TRUE);
}
